------------------- Upcoming version 1.5 -----------------------------

Major features:

- Support for OPARI2 2.0 was integrated. OPARI2 is now more
  flexible to enable support for other pragma/directive based
  paradigms.

Features and improvements:

User tools and API improvements and changes:

- The option --pomp does not take any options any more.
- Specific options for OPARI2 are passed via the
  --opari=<parameter-list> option.
- To enable or disable instrumentation of OpenMP the options
  --openmp and --noopenmp have been added. Note that for compile
  units with enabled OpenMP compilerflag, instrumentation is
  enabled by default. However, when manually disabling, some
  instrumentation must still be carried out, to ensure a
  thread-safe execution of the measurement system.
- POMP user instrumentation is no longer automatically activated
  together with OpenMP instrumentation. The --pomp flag has to be
  explicitly specified with the scorep command.
- On Cray systems, compiler instrumentation does not add '-G2' option
  anymore, which disables some optimizations.
- The instrumenter now warns the user, if the provided instrument filter
  wont be used by the active instrumentations.

Bugfixes:

- Fixes a possible segementation fault in the user adapter.
- Fixes an unitialized variable in the instrumenter.
- Fixed possible mistreatment of a profile node as being in an untied task

------------------- Released version 1.4.2 ---------------------------

Features and improvements:

- The GCC plug-in can also be built on cross build machines and with
  the GCC 5 release series.

Bugfixes:

 - The OpenMP flag for PGI compilers (-mp) may have a value appended.
   In this case, the instrumenter did not detect the OpenMP paradigm
   properly. Fixed.
 - On Cray systems, a conflict between the -eZ and and the -eP flag
   occurred if the instrumenter performed preprocessing before OPARI2
   instrumentation and the command line contains -eZ. Fixed.